Final final commit Translated everything to Spanish Fixed incident button text color turning wrong color Added grid for element placement with Adrian Added some comments

--- a/styles.css
+++ b/styles.css
@@ -42,14 +42,14 @@ h1 {
 
 #btn-container {
     display: flex;
-    position: relative;
+    position: fixed;
     flex-direction: column;
-    left: 40%;
+    right: 25%;
 }
 
 #logout-btn {
     height: 30px;
-    width: 80px;
+    width: 110px;
     background-color: rgb(54, 54, 54);
     color: white;
     font-size: 18px;
@@ -128,6 +128,11 @@ h1 {
     margin-right: 220px;
 }
 
+.search-container {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+}
+
 #search-form {
     margin-bottom: 30px;
     position: relative;
@@ -152,22 +157,39 @@ h1 {
     width: 65px;
 }
 
-#main-container {
+#register-main-container {
     display: flex;
     justify-content: center;
     margin-top: 40px;
 }
 
+#main-container {
+    display: grid;
+    grid-template-rows: 100px auto;
+    grid-template-columns: 50px 318px 50px auto 50px;
+    justify-content: center;
+    margin-top: 70px;
+    width: 100%;
+    height: calc(100vh - 150px);
+}
+
 #box-container {
     display: flex;
-    justify-content: center;
+    
     position: relative;
     flex-direction: column;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.bar-container {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
 }
 
 #incident_selector_container {
     width: 303px;
-    height: 600px;
+    height: 581px;
     background-color: white;
     border-style: solid;
     border-width: 2px;
@@ -235,6 +257,8 @@ h1 {
     position: relative;
     justify-content: center;
     flex-direction: column;
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
 }
 
 #data {
@@ -256,6 +280,14 @@ h1 {
 #data h4 {
     margin-left: 60px;
     margin-top: 5px;
+}
+
+#data4 {
+    white-space: normal; 
+    width: 450px;
+    max-height: 1000px;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 #details {
